Dish name text overlap fix

--- a/src/styles/DishCard.css
+++ b/src/styles/DishCard.css
@@ -155,6 +155,11 @@
     background: #F8EFE0;
     border-radius: 20px;
     padding: 2em;
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+    justify-content: space-around;
+    row-gap: 2.875rem;
 }
 
 .card__info-top-info{
@@ -174,10 +179,10 @@
 }
 
 .card__quantity-field-wrapper {
-    position: absolute;
-    left: 50%;
+    position: relative;
+    /* left: 50%;
     top: 75%;
-    transform: translate(-50%, -60%);
+    transform: translate(-50%, -60%); */
 }
 
 .dish-card.active{
@@ -342,7 +347,7 @@ section.modal--customize-inner .card__quantity-title {
     /* text-align: center; */
     position: relative;
     left: 0;
-    top: 70px;
+    top: 0;
 }
 
 .card__quantity-inner-container p.card__code {
